<resources>

    <string name="user">国铁商城.user</string>
    <!--登录-->
    <string name="user_login">登录</string>
    <string name="user_account_hint">输入账号</string>
    <string name="user_paw_hint">输入密码</string>


    <string name="user_wx_login">微信登录</string>


    <!--平台我的页面-->
    <string name="mine_mine_fwgj">服务工具</string>
    <string name="main_mine_zzxx">资质信息</string>
    <string name="main_mine_xgmm">修改密码</string>
    <string name="main_mine_kfzx">客服中心</string>
    <string name="main_mine_yjfk">意见反馈</string>
    <string name="main_mine_sz">设置</string>


    <!--    商城我的页面-->
    <string name="mine_collect">我的收藏&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%s</string>
    <string name="mine_seek">浏览记录&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;%s</string>


    <string name="mine_order">采购单</string>
    <string name="mine_order_order">待下单</string>
    <string name="mine_order_send">待发货</string>
    <string name="mine_order_receive">待收货</string>
    <string name="mine_order_aftersale">已取消</string>

    <string name="mine_approve">我的审核</string>
    <string name="mine_approve_audit">待审核</string>
    <string name="mine_approve_pass">已通过</string>
    <string name="mine_approve_refuse">已驳回</string>


    <string name="user_setting">设置</string>
    <string name="user_set_address">地址管理</string>
    <string name="user_set_modifypaw">密码修改</string>
    <string name="user_set_version">当前版本</string>

    <string name="empty_title" />
    <string name="user_modify_verify">长度不少于8位，至少包含数字、字母和特殊字符，字母区分大小写</string>
    <string name="user_set_exit">退出登录</string>
    <string name="input_old_password">请输入原密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_new_psw_again">请再次输入新密码</string>
    <string name="about_us">关于国铁商城APP</string>
    <string name="scan_qr_code">扫描二维码下载客户端</string>
    <string name="website_is">官方网址</string>
    <string name="save_qr_code">保存二维码</string>


    <string-array name="tab_titles">
        <item>随机码登录</item>
        <item>手机登录</item>
    </string-array>

</resources>