<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/btn_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginRight="@dimen/common_border"
        android:background="@drawable/bottom_line_bg"
        android:drawableRight="@drawable/svg_arrow_white"
        android:gravity="center_vertical"
        android:text="@string/user_set_address"
        android:textColor="@color/font_black"
        android:textSize="@dimen/font_size_15" />


    <TextView
        android:id="@+id/btn_modify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_65"
        android:layout_below="@+id/btn_address"
        android:layout_marginLeft="@dimen/dp_18"
        android:layout_marginRight="@dimen/common_border"
        android:background="@drawable/bottom_line_bg"
        android:drawableRight="@drawable/svg_arrow_white"
        android:gravity="center_vertical"
        android:text="@string/user_set_modifypaw"
        android:textColor="@color/font_black"
        android:textSize="@dimen/font_size_15" />

    <com.rails.purchaseplatform.common.widget.LrLableLayout
        android:id="@+id/btn_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_below="@+id/btn_modify"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        app:is_hide="true"
        app:key="当前版本"
        app:key_color="@color/font_black"
        app:key_size="@dimen/font_size_15"
        app:value_color="@color/font_black"
        app:value_size="@dimen/font_size_15" />

    <View
        style="@style/line_thin_gray"
        android:layout_marginLeft="@dimen/common_border"
        android:layout_marginRight="@dimen/common_border"
        android:layout_below="@+id/btn_version" />


    <View
        style="@style/line_thin_shade"
        android:layout_above="@+id/btn_exit" />

    <TextView
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/user_set_exit"
        android:textColor="@color/font_black"
        android:textSize="@dimen/font_size_16" />


</RelativeLayout>